chore: .gitignore add an credentials of db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=CadastroDeNinjas
+
+# Habilita o console do H2
+spring.h2.console.enabled=true
+
+# Caminho para acessar o console
+spring.h2.console.path=/h2-console
+
+# Configuração da URL do banco
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=cadastro_db
+spring.datasource.password=cadastro_db
+
+# Mostrar SQLs no log (opcional)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Usar o Hibernate para criar o schema (opcional)
+spring.jpa.hibernate.ddl-auto=update
