--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,21 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Configuração da URL do banco
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=cadastro_db
-spring.datasource.password=cadastro_db
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 # Mostrar SQLs no log (opcional)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+
+
 # Usar o Hibernate para criar o schema (opcional)
 spring.jpa.hibernate.ddl-auto=update
+
+# Configurar o Flyway
+spring.flyway.enable=true
+spring.flyway.locations=classpath:db/migrations
+spring.flyway.baseline-on-migrate=true
